src/assets/scss/_service.scss
/* ... */
.service-section-3 {
    position: relative;

    .line-shape-2 {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;

        img {
            @include imgw;
        }
    }
}

.service-details-wrapper {
    .service-details-items {
        .details-image {
            img {
                @include imgw;
            }
        }

        .details-content {
            margin-top: 35px;

            @include breakpoint (max-sm){
                margin-top: 25px;
            }

            h3 {
                font-size: 30px;

                @include breakpoint (max-md){
                    font-size: 26px;
                }

                @include breakpoint (max-sm){
                    font-size: 24px;
                }
            }

            .details-video-items {
                @include flex;
                gap: 30px;
                margin-top: 40px;
                margin-bottom: 40px;
                flex-wrap: wrap;

                @include breakpoint (max-sm){
                    margin-top: 20px;
                    margin-bottom: 20px;
                }

                .video-thumb {
                    position: relative;

                    img {
                        @include imgw;
                    }

                    .video-box {
                        position: absolute;
                        top: 50%;
                        left: 50%;
                        border-radius: 50%;
                        text-align: center;
                        transform: translate(-50%,-50%);
            
                        .video-btn {
                            width: 55px;
                            height: 55px;
                            line-height: 55px;
                            background-color: $white;
                            color: $theme-color;
                            display: inline-block;
                            text-align: center;
                            border-radius: 50%;
                        }
            
                        .ripple {
                            &::before,&::after {
                                box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.8);
                                width: 62px;
                                height: 62px;
                            }
                        }
                    }            
                }

                .content {
                    p {
                        margin-top: 5px;
                    }

                    .list {
                        margin-top: 20px;

                        li {
                            font-weight: 500;
                            &:not(:last-child){
                                margin-bottom: 10px;
                            }

                            i {
                                margin-right: 10px;
                                color: $theme-color;
                            }
                        }
                    }
                }
            }

            .image-area {
                margin-top: 30px;
                margin-bottom: 40px;

                .thumb {
                    img {
                        @include imgw;
                    }
                }
            }
        }
    }
}
/* ... */

